[package]
categories = ["algorithms", "no-std"]
description = "A stable graph with undo/redo built in."
documentation = "https://docs.rs/ddgg"
edition = "2021"
homepage = "https://github.com/smj-edison/ddgg"
keywords = ["graph", "algorithms", "history", "stable", "undo"]
license = "MIT OR Apache-2.0"
name = "ddgg"
readme = "README.md"
repository = "https://github.com/smj-edison/ddgg"
version = "0.5"

[dependencies]
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true}

[features]
js_names = []
serde = ["dep:serde"]

default = ["serde"]
